testing new config

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -91,26 +91,30 @@ key_bindings:
   - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
 
 colors:
+  # Default colors
   primary:
-    background: '0x1d262a'
-    foreground: '0xe7ebed'
+    background: '#292C3E'
+    foreground: '#EBEBEB'
 
+  # Normal colors
   normal:
-    black:   '0x435b67'
-    red:     '0xfc3841'
-    green:   '0x5cf19e'
-    yellow:  '0xfed032'
-    blue:    '0x37b6ff'
-    magenta: '0xfc226e'
-    cyan:    '0x59ffd1'
-    white:   '0xffffff'
+    black:   '#0d0d0d'
+    red:     '#FF301B'
+    green:   '#A0E521'
+    yellow:  '#FFC620'
+    blue:    '#1BA6FA'
+    magenta: '#8763B8'
+    cyan:    '#21DEEF'
+    white:   '#EBEBEB'
 
+  # Bright colors
   bright:
-    black:   '0xa1b0b8'
-    red:     '0xfc746d'
-    green:   '0xadf7be'
-    yellow:  '0xfee16c'
-    blue:    '0x70cfff'
-    magenta: '0xfc669b'
-    cyan:    '0x9affe6'
-    white:   '0xffffff'
+    black:   '#6D7070'
+    red:     '#FF4352'
+    green:   '#B8E466'
+    yellow:  '#FFD750'
+    blue:    '#1BA6FA'
+    magenta: '#A578EA'
+    cyan:    '#73FBF1'
+    white:   '#FEFEF8'
+
