--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,116 +1,63 @@
+window:
+  dynamic_padding: true
+  decorations: Buttonless
+  startup_mode: Maximized
+
 scrolling:
   history: 10000
   multiplier: 3
 
 font:
   normal:
+    #family: PragmataPro Mono Liga
     family: Iosevka Nerd Font Mono
     style: Regular
-  size: 16
+  size: 20
 
 use_thin_strokes: true
 
 url:
   launcher: open
 
-key_bindings:
-  - { key: A,         mods: Alt,       chars: "\x1ba"                       }
-  - { key: B,         mods: Alt,       chars: "\x1bb"                       }
-  - { key: C,         mods: Alt,       chars: "\x1bc"                       }
-  - { key: D,         mods: Alt,       chars: "\x1bd"                       }
-  - { key: E,         mods: Alt,       chars: "\x1be"                       }
-  - { key: F,         mods: Alt,       chars: "\x1bf"                       }
-  - { key: G,         mods: Alt,       chars: "\x1bg"                       }
-  - { key: H,         mods: Alt,       chars: "\x1bh"                       }
-  - { key: I,         mods: Alt,       chars: "\x1bi"                       }
-  - { key: J,         mods: Alt,       chars: "\x1bj"                       }
-  - { key: K,         mods: Alt,       chars: "\x1bk"                       }
-  - { key: L,         mods: Alt,       chars: "\x1bl"                       }
-  - { key: M,         mods: Alt,       chars: "\x1bm"                       }
-  - { key: N,         mods: Alt,       chars: "\x1bn"                       }
-  - { key: O,         mods: Alt,       chars: "\x1bo"                       }
-  - { key: P,         mods: Alt,       chars: "\x1bp"                       }
-  - { key: Q,         mods: Alt,       chars: "\x1bq"                       }
-  - { key: R,         mods: Alt,       chars: "\x1br"                       }
-  - { key: S,         mods: Alt,       chars: "\x1bs"                       }
-  - { key: T,         mods: Alt,       chars: "\x1bt"                       }
-  - { key: U,         mods: Alt,       chars: "\x1bu"                       }
-  - { key: V,         mods: Alt,       chars: "\x1bv"                       }
-  - { key: W,         mods: Alt,       chars: "\x1bw"                       }
-  - { key: X,         mods: Alt,       chars: "\x1bx"                       }
-  - { key: Y,         mods: Alt,       chars: "\x1by"                       }
-  - { key: Z,         mods: Alt,       chars: "\x1bz"                       }
-  - { key: A,         mods: Alt|Shift, chars: "\x1bA"                       }
-  - { key: B,         mods: Alt|Shift, chars: "\x1bB"                       }
-  - { key: C,         mods: Alt|Shift, chars: "\x1bC"                       }
-  - { key: D,         mods: Alt|Shift, chars: "\x1bD"                       }
-  - { key: E,         mods: Alt|Shift, chars: "\x1bE"                       }
-  - { key: F,         mods: Alt|Shift, chars: "\x1bF"                       }
-  - { key: G,         mods: Alt|Shift, chars: "\x1bG"                       }
-  - { key: H,         mods: Alt|Shift, chars: "\x1bH"                       }
-  - { key: I,         mods: Alt|Shift, chars: "\x1bI"                       }
-  - { key: J,         mods: Alt|Shift, chars: "\x1bJ"                       }
-  - { key: K,         mods: Alt|Shift, chars: "\x1bK"                       }
-  - { key: L,         mods: Alt|Shift, chars: "\x1bL"                       }
-  - { key: M,         mods: Alt|Shift, chars: "\x1bM"                       }
-  - { key: N,         mods: Alt|Shift, chars: "\x1bN"                       }
-  - { key: O,         mods: Alt|Shift, chars: "\x1bO"                       }
-  - { key: P,         mods: Alt|Shift, chars: "\x1bP"                       }
-  - { key: Q,         mods: Alt|Shift, chars: "\x1bQ"                       }
-  - { key: R,         mods: Alt|Shift, chars: "\x1bR"                       }
-  - { key: S,         mods: Alt|Shift, chars: "\x1bS"                       }
-  - { key: T,         mods: Alt|Shift, chars: "\x1bT"                       }
-  - { key: U,         mods: Alt|Shift, chars: "\x1bU"                       }
-  - { key: V,         mods: Alt|Shift, chars: "\x1bV"                       }
-  - { key: W,         mods: Alt|Shift, chars: "\x1bW"                       }
-  - { key: X,         mods: Alt|Shift, chars: "\x1bX"                       }
-  - { key: Y,         mods: Alt|Shift, chars: "\x1bY"                       }
-  - { key: Z,         mods: Alt|Shift, chars: "\x1bZ"                       }
-  - { key: Key1,      mods: Alt,       chars: "\x1b1"                       }
-  - { key: Key2,      mods: Alt,       chars: "\x1b2"                       }
-  - { key: Key3,      mods: Alt,       chars: "\x1b3"                       }
-  - { key: Key4,      mods: Alt,       chars: "\x1b4"                       }
-  - { key: Key5,      mods: Alt,       chars: "\x1b5"                       }
-  - { key: Key6,      mods: Alt,       chars: "\x1b6"                       }
-  - { key: Key7,      mods: Alt,       chars: "\x1b7"                       }
-  - { key: Key8,      mods: Alt,       chars: "\x1b8"                       }
-  - { key: Key9,      mods: Alt,       chars: "\x1b9"                       }
-  - { key: Key0,      mods: Alt,       chars: "\x1b0"                       }
-  - { key: Space,     mods: Control,   chars: "\x00"                        } # Ctrl + Space
-  - { key: Grave,     mods: Alt,       chars: "\x1b`"                       } # Alt + `
-  - { key: Grave,     mods: Alt|Shift, chars: "\x1b~"                       } # Alt + ~
-  - { key: Period,    mods: Alt,       chars: "\x1b."                       } # Alt + .
-  - { key: Key8,      mods: Alt|Shift, chars: "\x1b*"                       } # Alt + *
-  - { key: Key3,      mods: Alt|Shift, chars: "\x1b#"                       } # Alt + #
-  - { key: Period,    mods: Alt|Shift, chars: "\x1b>"                       } # Alt + >
-  - { key: Comma,     mods: Alt|Shift, chars: "\x1b<"                       } # Alt + <
-  - { key: Minus,     mods: Alt|Shift, chars: "\x1b_"                       } # Alt + _
-  - { key: Key5,      mods: Alt|Shift, chars: "\x1b%"                       } # Alt + %
-  - { key: Key6,      mods: Alt|Shift, chars: "\x1b^"                       } # Alt + ^
-  - { key: Backslash, mods: Alt,       chars: "\x1b\\"                      } # Alt + \
-  - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
+draw_bold_text_with_bright_colors: true
 
+background_opacity: 0.8
+
+#https://github.com/sindresorhus/hyper-snazzy
 colors:
+
   primary:
-    background: '0x1d262a'
-    foreground: '0xe7ebed'
+    background: '#282a36'
+    foreground: '#eff0eb'
+
+  cursor:
+    cursor: '#97979b'
+
+  selection:
+    text:       '#282a36'
+    background: '#feffff'
 
   normal:
-    black:   '0x435b67'
-    red:     '0xfc3841'
-    green:   '0x5cf19e'
-    yellow:  '0xfed032'
-    blue:    '0x37b6ff'
-    magenta: '0xfc226e'
-    cyan:    '0x59ffd1'
-    white:   '0xffffff'
+    black:   '#282a36'
+    red:     '#ff5c57'
+    green:   '#5af78e'
+    yellow:  '#f3f99d'
+    blue:    '#57c7ff'
+    magenta: '#ff6ac1'
+    cyan:    '#9aedfe'
+    white:   '#f1f1f0'
 
   bright:
-    black:   '0xa1b0b8'
-    red:     '0xfc746d'
-    green:   '0xadf7be'
-    yellow:  '0xfee16c'
-    blue:    '0x70cfff'
-    magenta: '0xfc669b'
-    cyan:    '0x9affe6'
-    white:   '0xffffff'
+    black:   '#686868'
+    red:     '#ff5c57'
+    green:   '#5af78e'
+    yellow:  '#f3f99d'
+    blue:    '#57c7ff'
+    magenta: '#ff6ac1'
+    cyan:    '#9aedfe'
+    white:   '#eff0eb'
+
+key_bindings:
+  - { key: F,  mods: Alt,           chars: "\x1bf"                       }
+  - { key: B,  mods: Alt,           chars: "\x1bb"                       }
+  - { key: D,  mods: Alt,           chars: "\x1bd"                       }
