actual config simplified

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,7 +1,17 @@
+shell:
+  program: /opt/homebrew/bin/tmux 
+  args:
+    - new-session 
+    - -A 
+    - -D 
+    - -s 
+    - main
+
 window:
   dynamic_padding: true
   decorations: Buttonless
   startup_mode: Maximized
+  opacity: 0.95
 
 scrolling:
   history: 10000
@@ -9,8 +19,7 @@ scrolling:
 
 font:
   normal:
-    #family: PragmataPro Mono Liga
-    family: Iosevka Nerd Font Mono
+    family: PragmataPro Mono Liga
     style: Regular
   size: 20
 
@@ -21,11 +30,8 @@ url:
 
 draw_bold_text_with_bright_colors: true
 
-background_opacity: 0.8
-
 #https://github.com/sindresorhus/hyper-snazzy
 colors:
-
   primary:
     background: '#282a36'
     foreground: '#eff0eb'
@@ -56,8 +62,3 @@ colors:
     magenta: '#ff6ac1'
     cyan:    '#9aedfe'
     white:   '#eff0eb'
-
-key_bindings:
-  - { key: F,  mods: Alt,           chars: "\x1bf"                       }
-  - { key: B,  mods: Alt,           chars: "\x1bb"                       }
-  - { key: D,  mods: Alt,           chars: "\x1bd"                       }
